# domainfi-agent-toolkit

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml
.agents/skills/testing-app/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: validate.yml
docs/: ARCHITECTURE.md  ARC_MVP.md  ARC_PRODUCTION_DEPLOYMENT.md  GRANT_SCOPE.md  ROADMAP.md
examples/arc-x402-paid-agent/: .env.example  README.md  arc-mvp.config.json  client.py  server.py
examples/watchlists/: brandable-ai.json  defi-cheap.json
prompts/: wire-arc-testnet-status.md
scripts/: live_arc_gateway_smoke.py  smoke_arc_paid_agent.py  validate_repo.py
src/domainfi_toolkit/: __init__.py  __main__.py  agent.py  arc.py  arc_mcp.py  cli.py  models.py  notifiers.py  providers.py  scoring.py  watchlist.py
src/domainfi_toolkit/data/: sample_inventory.json
tests/: test_agent.py  test_arc.py  test_arc_deployment_assets.py  test_arc_example.py  test_arc_gateway_cli.py  test_arc_mcp.py  test_arc_mcp_server.py  test_arc_smoke_script.py  test_circle_gateway.py  test_cli.py  test_doma_cli.py  test_doma_provider.py  test_models.py  test_notifiers.py  test_scoring.py
